--- a/po/es.po
+++ b/po/es.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-04 22:11+0100\n"
-"PO-Revision-Date: 2020-03-04 16:46+0100\n"
+"POT-Creation-Date: 2020-03-21 09:09+0100\n"
+"PO-Revision-Date: 2020-03-17 01:28+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
 "Language: es\n"
@@ -125,13 +125,13 @@ msgstr "%.0f MB"
 msgid "%.0f kB"
 msgstr "%.0f kB"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%.1f° E"
-msgstr "%.1f°E"
+msgstr "%.1f° E"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%.1f° W"
-msgstr "%.1f°W"
+msgstr "%.1f° W"
 
 #, python-format
 msgid "%.2f GB"
@@ -501,7 +501,7 @@ msgid "16:9 always"
 msgstr "siempre 16:9"
 
 msgid "16K"
-msgstr ""
+msgstr "16K"
 
 #
 msgid "18 V"
@@ -571,9 +571,8 @@ msgid "4:3 PanScan"
 msgstr "4:3 PanScan"
 
 #
-#, fuzzy
 msgid "4K"
-msgstr "4"
+msgstr "4K"
 
 #
 msgid "5"
@@ -595,9 +594,8 @@ msgid "8"
 msgstr "8"
 
 #
-#, fuzzy
 msgid "8K"
-msgstr "8"
+msgstr "8K"
 
 msgid "8bit"
 msgstr "8bit"
@@ -610,25 +608,22 @@ msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - por defecto (desactivado)"
 
 #
-#, fuzzy
 msgid "< Current >"
-msgstr "Valor actual:"
+msgstr "< Valor actual >"
 
 #
-#, fuzzy
 msgid "< Default + Picon >"
-msgstr "<Piel predeterminada>"
+msgstr "< Piel predeterminada + Picon >"
 
 #
-#, fuzzy
 msgid "< Default >"
-msgstr "<Piel predeterminada>"
+msgstr "< Piel predeterminada >"
 
 msgid "< Emergency >"
-msgstr ""
+msgstr "< Emergencia >"
 
 msgid "< Pending restart >"
-msgstr ""
+msgstr "<Pendiente de reinicio>"
 
 #
 msgid "<Current movielist location>"
@@ -1535,9 +1530,8 @@ msgid "Begin time"
 msgstr "Hora inicio"
 
 #
-#, fuzzy
 msgid "Behavior of '0' button in PiP mode"
-msgstr "Tecla 0 en el modo PiP"
+msgstr "Comportamiento del botón ‘0’ en modo PiP"
 
 msgid "Behavior of 'pause and ok' when paused"
 msgstr "Comportamiento de ‘pausa y ok’ cuando se detiene"
@@ -1619,9 +1613,8 @@ msgid "Boot to Recovery menu"
 msgstr "Menú Arrancar a recuperación"
 
 #
-#, fuzzy
 msgid "Bootup time"
-msgstr "Hora de la orden"
+msgstr "arranque"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnia y Herzegovina"
@@ -1794,18 +1787,17 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 msgid "Cancel any changes to the currently active skin"
-msgstr ""
+msgstr "Cancelar cualquier cambio en la piel actualmente activa"
 
 msgid "Cancel any changes to the currently active skin and exit all menus"
-msgstr ""
+msgstr "Cancela cualquier cambio en la piel activa actualmente y sal de todos los menús"
 
 msgid "Cancel any text changes and exit"
 msgstr "Cancelar cualquier cambio de texto y salir."
 
 #
-#, fuzzy
 msgid "Cancel execution?"
-msgstr "Selección de Canal"
+msgstr "Selección de Canal?"
 
 msgid "Cancelled upon user request"
 msgstr "Cancelado a petición del usuario"
@@ -2050,9 +2042,8 @@ msgstr "Clone la pantalla de TV al modo LCD"
 msgid "Close"
 msgstr "Cerrar"
 
-#, fuzzy
 msgid "Close PiP with 'exit' button"
-msgstr "Cerrar PiP en la salida"
+msgstr "Cerrar PiP con el botón 'salir'"
 
 #
 msgid "Close title selection"
@@ -2177,9 +2168,8 @@ msgid "Configure an additional delay to improve subtitle synchronisation."
 msgstr "Configure un retardo adicional para mejorar la sincronización de subtítulos."
 
 #
-#, fuzzy
 msgid "Configure default type for new timers."
-msgstr "Configure la máscara de red."
+msgstr "Configurar el tipo predeterminado para los nuevos temporizadores."
 
 msgid "Configure for how long the infobar will remain visible after activation."
 msgstr "Configure durante cuánto tiempo permanecerá visible la infobar después de la activación."
@@ -2199,9 +2189,8 @@ msgstr "Configurar cómo debe funcionar el ventilador"
 msgid "Configure if and how crypto icons will be shown in the channel selection list."
 msgstr "Configure si y cómo se mostrarán los iconos de criptografía en la lista de selección de canales."
 
-#, fuzzy
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
-msgstr "Configure si y por cuánto tiempo se recordará el servicio más reciente en el PiP."
+msgstr "Configure si y cuánto tiempo se recordará el último servicio en el modo Imagen en imagen."
 
 msgid "Configure if and how service type icons will be shown in the channel selection list."
 msgstr "Configure si y cómo se mostrarán los iconos del tipo de servicio en la lista de selección de canales."
@@ -2315,9 +2304,8 @@ msgstr "Configure el cuarto idioma de audio."
 msgid "Configure the fourth subtitle language."
 msgstr "Configure el idioma del subtítulo cuarto."
 
-#, fuzzy
 msgid "Configure the function of the '0' button when Picture in Picture is active."
-msgstr "Configure la función del botón ‘0’ cuando PIP está activo."
+msgstr "Configure la función del botón '0' cuando Imagen en imagen está activa."
 
 #
 msgid "Configure the gateway."
@@ -2602,10 +2590,6 @@ msgstr "No se pudieron encontrar los medios adecuados: elimine algunas imágenes
 msgid "Could not load medium! No disc inserted?"
 msgstr "No puedo cargar el Medio! Hay disco insertado?"
 
-#, fuzzy
-msgid "Could not locate epg file on fallback tuner"
-msgstr "Habilitar el temporizador de importación desde el sintonizador de retroceso"
-
 #
 msgid "Could not open Picture in Picture"
 msgstr "No puedo abrir el PiP"
@@ -2875,9 +2859,8 @@ msgstr "Ubicación por defecto de películas"
 msgid "Default settings"
 msgstr "Parámetros por Defecto"
 
-#, fuzzy
 msgid "Default timer type"
-msgstr "Eliminar temporizador"
+msgstr "Tipo de temporizador predeterminado"
 
 msgid "Define the location of the EPG Cache file."
 msgstr "Defina la ubicación del archivo EPG Cache."
@@ -3152,9 +3135,8 @@ msgid "Display EPG list for current channel"
 msgstr "Mostrar la lista de EPG para el canal actual"
 
 #
-#, fuzzy
 msgid "Display Skin"
-msgstr "Configuración de pantalla"
+msgstr "Mostrar"
 
 #
 msgid "Display and userinterface"
@@ -3431,12 +3413,16 @@ msgid "EPG settings"
 msgstr "Configuración de EPG"
 
 msgid "EPG:"
-msgstr ""
+msgstr "EPG"
 
 #
 #, python-format
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - ¡falló la búsqueda (%s)!"
+
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
 
 #
 msgid "East"
@@ -3753,6 +3739,11 @@ msgstr "Eritrea"
 msgid "Error"
 msgstr "Error"
 
+#
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Error"
+
 msgid "Error code"
 msgstr "Codigo error"
 
@@ -3785,10 +3776,25 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Error stop stream!"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+#, fuzzy
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+"Error al recuperar la información del temporizador de reserva\n"
+"% s"
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+"Error al recuperar la información del temporizador de reserva\n"
+"% s"
+
+#, fuzzy
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 "Error al recuperar la información del temporizador de reserva\n"
 "% s"
@@ -3969,9 +3975,8 @@ msgstr "Coloración del diálogo de subtítulos externos"
 msgid "External subtitle switch fonts"
 msgstr "Fuentes de conmutador de subtítulos externos"
 
-#, fuzzy
 msgid "Externally powered"
-msgstr "Almacenamiento externo% s"
+msgstr "Accionado externamente"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
 msgstr "Tiempo de fin extra para ignorar la inactividad sleeptimer"
@@ -4027,7 +4032,7 @@ msgid "FEC:"
 msgstr "FEC:"
 
 msgid "FHD"
-msgstr ""
+msgstr "FHD"
 
 msgid "FTA"
 msgstr "FTA"
@@ -4315,9 +4320,8 @@ msgid "GUI Settings"
 msgstr "Configuración de GUI"
 
 #
-#, fuzzy
 msgid "GUI Skin"
-msgstr "Configuración de GUI"
+msgstr "Configuración de Piel"
 
 msgid ""
 "GUI needs a restart to apply a new language\n"
@@ -4499,9 +4503,8 @@ msgid "H"
 msgstr "H"
 
 #
-#, fuzzy
 msgid "HD"
-msgstr "D"
+msgstr "HD"
 
 msgid "HD list"
 msgstr "Lista de alta definición"
@@ -4510,7 +4513,7 @@ msgid "HD2400"
 msgstr "HD2400"
 
 msgid "HD60"
-msgstr ""
+msgstr "HD60"
 
 msgid "HDMI"
 msgstr "HDMI"
@@ -4848,9 +4851,8 @@ msgstr "Incluir ECM en los flujos http"
 msgid "Include EIT in http streams"
 msgstr "Incluir EIT en los flujos http"
 
-#, fuzzy
 msgid "Incorrect service type for Picture in Picture!"
-msgstr "Servicio de tipo incorrecto para PiP!"
+msgstr "¡Tipo de servicio incorrecto para Picture in Picture!"
 
 #
 msgid "Increased voltage"
@@ -5503,6 +5505,8 @@ msgid ""
 "Manufacturer reset in progress\n"
 "Please wait until enigma2 restarts"
 msgstr ""
+"Reinicio del fabricante en progreso\n"
+"Por favor espere hasta que se reinicie enigma2"
 
 #
 msgid "Margin after recording (minutes)"
@@ -5679,7 +5683,6 @@ msgstr "Montar"
 msgid "Move"
 msgstr "Movimiento"
 
-#, fuzzy
 msgid "Move PiP"
 msgstr "Mover PIP"
 
@@ -5723,24 +5726,20 @@ msgid "Move to position X"
 msgstr "Mover a la posición X"
 
 #
-#, fuzzy
 msgid "Move to the next page"
-msgstr "cambiar al siguiente ángulo"
+msgstr "Ir a la página siguiente"
 
 #
-#, fuzzy
 msgid "Move to the next skin"
-msgstr "mover abajo la entrada siguiente"
+msgstr "mover a la  siguiente piel"
 
 #
-#, fuzzy
 msgid "Move to the previous page"
-msgstr "vuelva al capítulo anterior"
+msgstr "Ir a la página anterior"
 
 #
-#, fuzzy
 msgid "Move to the previous skin"
-msgstr "mover arriba la entrada anterior"
+msgstr "Moverse a la piel anterior"
 
 #
 msgid "Move west"
@@ -5803,9 +5802,8 @@ msgstr "Selección de lista Multi-EPG"
 msgid "MultiType"
 msgstr "Multitipo"
 
-#, fuzzy
 msgid "Multiboot image selector"
-msgstr "Multisat all select"
+msgstr "Multiboot  seleccione  imagen"
 
 msgid "Multichannel PCM"
 msgstr "PCM multicanal"
@@ -6043,6 +6041,9 @@ msgstr "No hay descripción."
 msgid "No displayable files on this medium found!"
 msgstr "¡No hay ficheros visualizables en su medio!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 #
 msgid "No event info found, recording indefinitely."
 msgstr "No hay info del evento, grabando indefinidamente."
@@ -6092,9 +6093,6 @@ msgstr "No servicio"
 #
 msgid "No services/providers selected"
 msgstr "No se seleccionaron servicios / proveedores"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 #
 msgid "No standby"
@@ -6365,7 +6363,7 @@ msgid "Open the movie list"
 msgstr "Abrir la lista de películas"
 
 msgid "Opkg"
-msgstr ""
+msgstr "Opkg"
 
 msgid "Options disable timer"
 msgstr "Opciones desactivar temporizador"
@@ -7069,9 +7067,9 @@ msgid "Press OK on your remote control to continue."
 msgstr "Pulse OK en el mando a distancia para continuar."
 
 #
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to activate the selected%s skin."
-msgstr "Pulse OK para activar la piel seleccionada."
+msgstr "Presione OK para activar la piel% s seleccionada."
 
 #
 msgid "Press OK to activate the settings."
@@ -7087,9 +7085,9 @@ msgid "Press OK to get further details for %s"
 msgstr "Pulse OK para obtener más detalles para %s"
 
 #
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to keep the currently selected%s skin."
-msgstr "Pulse OK para activar la piel seleccionada."
+msgstr "Presione OK para mantener la piel% s seleccionada actualmente."
 
 #
 msgid "Press OK to scan"
@@ -7302,9 +7300,8 @@ msgstr "¿Quiere borrar las programaciones terminadas?"
 msgid "Really exit the subservices quickzap?"
 msgstr "¿Quiere salir del zapeo rápido de subcananles?"
 
-#, fuzzy
 msgid "Really perform a manufacturer reset now?"
-msgstr "Proteja la pantalla de reinicio del fabricante"
+msgstr "Realmente realizar un restablecimiento del fabricante ahora?"
 
 #
 msgid "Really reboot now?"
@@ -7683,9 +7680,8 @@ msgstr "Restaurar"
 msgid "Restore backups"
 msgstr "Restaurar backups"
 
-#, fuzzy
 msgid "Restore defaults"
-msgstr "Establecer predeterminado"
+msgstr "Restaurar valores predeterminados"
 
 msgid "Restore deleted user bouquets"
 msgstr "Restaurar los userbouquets eliminados"
@@ -7934,9 +7930,8 @@ msgid "Save / Enter text and exit"
 msgstr "Guardar / ingresar texto y salir"
 
 #
-#, fuzzy
 msgid "Save and activate the currently selected skin"
-msgstr "Pulse OK para activar la piel seleccionada."
+msgstr "Pulse OK para activar la piel seleccionada"
 
 msgid "Save and exit"
 msgstr "Guardar"
@@ -8408,6 +8403,13 @@ msgstr "Seleccione el teclado virtual cambiado el conjunto de caracteres"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Seleccione el teclado virtual cambiado el conjunto de caracteres solo"
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Seleccione la resolución horizontal:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 #
 msgid "Select update source"
 msgstr "Seleccionar fuente de actualización"
@@ -8425,7 +8427,7 @@ msgid "Select video mode"
 msgstr "Seleccionar el modo de video"
 
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
+msgstr "Seleccione si su dispositivo SCR está alimentado externamente."
 
 #
 msgid "Select wireless network"
@@ -8747,7 +8749,6 @@ msgstr "Mostrar juegos"
 msgid "Show InfoBar"
 msgstr "Mostrar InfoBar"
 
-#, fuzzy
 msgid "Show PiP"
 msgstr "Mostrar PIP"
 
@@ -9074,12 +9075,11 @@ msgstr "Longitud del sitio"
 msgid "Skin & Resolution: %s (%sx%s)\n"
 msgstr "Piel y resolución:% s (% sx% s)\n"
 
-#, fuzzy
 msgid "Skin Selection Actions"
-msgstr "Seleccione la acción"
+msgstr " Skin Seleccione la acción"
 
 msgid "SkinSelector: Restart GUI"
-msgstr ""
+msgstr "SkinSelector: Reinicie la GUI"
 
 #
 msgid "Skins"
@@ -9630,7 +9630,6 @@ msgstr "Suriname"
 msgid "Svalbard and Jan Mayen"
 msgstr "Svalbard y Jan Mayen"
 
-#, fuzzy
 msgid "Swap PiP"
 msgstr "Swap PIP"
 
@@ -10361,9 +10360,8 @@ msgid "Timer type"
 msgstr "Tipo de temporizador"
 
 #
-#, fuzzy
 msgid "Timer:"
-msgstr "Grabación"
+msgstr "Grabación:"
 
 #
 msgid "Timeshift"
@@ -10387,6 +10385,11 @@ msgstr "¡Pausa no posible!"
 msgid "Timezone"
 msgstr "Zona horaria"
 
+#
+#, fuzzy
+msgid "Timezone area"
+msgstr "Zona horaria"
+
 msgid "Timor-Leste"
 msgstr "Timor Oriental"
 
@@ -10404,14 +10407,14 @@ msgstr "Modo Título"
 
 #, python-format
 msgid "To apply the selected '%s' skin the GUI needs to restart. Would you like to restart the GUI now?"
-msgstr ""
+msgstr "Para aplicar el aspecto '%s' seleccionado, la GUI debe reiniciarse. ¿Desea reiniciar la GUI ahora?"
 
 msgid "To audio selection"
 msgstr "A la selección de audio"
 
 #, python-format
 msgid "To save and apply the selected '%s' skin the GUI needs to restart. Would you like to save the selection and restart the GUI now?"
-msgstr ""
+msgstr "Para guardar y aplicar el aspecto seleccionado '%s' la GUI necesita reiniciarse. ¿Desea guardar la selección y reiniciar la GUI ahora?"
 
 msgid "To subtitle selection"
 msgstr "Para subtitular la selección"
@@ -10426,9 +10429,8 @@ msgstr "Alternar HDMI In"
 msgid "Toggle LCD LiveTV"
 msgstr "Alternar LCD LiveTV"
 
-#, fuzzy
 msgid "Toggle PiPzap"
-msgstr "Alternar PIPzap"
+msgstr "Toggle PiPzap"
 
 msgid "Toggle TV/RADIO mode"
 msgstr "Alternar el modo TV / RADIO"
@@ -11336,9 +11338,8 @@ msgstr "¿Qué tipo de escaneo de servicio quieres?"
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Cuando está habilitado, enigma2 cargará los usuarios desvinculados. Esto significa que los userbouquets que están disponibles, pero que no están incluidos en los archivos bouquets.tv o bouquets.radio, seguirán cargándose. Esto le permite, por ejemplo, mantener su propio ramo de usuario mientras se instalan los ajustes instalados"
 
-#, fuzzy
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
-msgstr "Cuando está activado, el PiP se puede cerrar con el botón de salida."
+msgstr "Cuando está habilitada, la ventana Imagen en imagen se puede cerrar con el botón ‘salir’."
 
 msgid "When enabled the arrow buttons around the OK button will follow the 'neutrino' style zap controls instead of the enigma2 style."
 msgstr "Cuando está activado, los botones de flecha alrededor del botón OK seguirán los controles zap del estilo “neutrino” en lugar del estilo enigma2"
@@ -11915,24 +11916,22 @@ msgstr "Zap al canal seleccionado, o mostrar información detallada del evento (
 msgid "Zap up"
 msgstr "Zap up"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Zapped to timer service %s as Picture in Picture!"
-msgstr "Zapped para dar servicio al temporizador% s como PiP!"
+msgstr "Zapped al servicio de temporizador% s como Picture in Picture!"
 
 #, python-format
 msgid "Zapped to timer service %s!"
 msgstr "Zapped al servicio de temporizador% s!"
 
-#, fuzzy
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
-msgstr "Zgemma H.S/H.2S/H.2H/H5/H7"
+msgstr "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 
 msgid "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
-msgstr ""
+msgstr "Zgemma H7(nuevo modelo)/H9(nuevo modelo)/H9COMBO/H9TWIN/H10"
 
-#, fuzzy
 msgid "Zgemma H9(old model)/I55Plus"
-msgstr "Zgemma H9/i55 Plus"
+msgstr "Zgemma H9(old model)/i55 Plus"
 
 msgid "Zgemma Star S/2S/H1/H2"
 msgstr "Zgemma Star S/2S/H1/H2"
@@ -12256,9 +12255,8 @@ msgstr "Error al escanear"
 msgid "et4000"
 msgstr "et4000"
 
-#, fuzzy
 msgid "et5000/et6000"
-msgstr "et5000/6000"
+msgstr "et5000/et6000"
 
 msgid "et8000/et10000"
 msgstr "et8000/et10000"
@@ -12266,9 +12264,8 @@ msgstr "et8000/et10000"
 msgid "et9000/et9100"
 msgstr "et9000/et9100"
 
-#, fuzzy
 msgid "et9200/et9500/et6500"
-msgstr "et9200/9500/6500"
+msgstr "et9200/et9500/et6500"
 
 msgid "execute cuts (requires MovieCut plugin)"
 msgstr "Ejecutar cortes (requiere MovieCut plugin)"
@@ -12945,9 +12942,8 @@ msgstr "fichero de plantilla"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
-#, fuzzy
 msgid "testing"
-msgstr "Pregunta"
+msgstr "Probar"
 
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Este ramo está protegido por un pin de control parental"
