--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -2370,9 +2370,6 @@ msgstr "Tidak bisa menemukan media yg cocok - Mohon hapus beberapa image yg diun
 msgid "Could not load medium! No disc inserted?"
 msgstr "Tidak bisa memuat media! Tidak ada piringan dimasukkan?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Tidak bisa membuka PiP"
 
@@ -3127,6 +3124,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Kesalahan - gagal melacak (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Timur"
 
@@ -3417,6 +3418,10 @@ msgstr ""
 msgid "Error"
 msgstr "Kesalahan"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Kesalahan"
+
 msgid "Error code"
 msgstr "Kode kesalahan"
 
@@ -3449,10 +3454,25 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Kesalahan, hentikan stream!"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+#, fuzzy
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+"Kesalahan ketika mengambil informasi pewaktu mundur\n"
+"%s"
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+"Kesalahan ketika mengambil informasi pewaktu mundur\n"
+"%s"
+
+#, fuzzy
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 "Kesalahan ketika mengambil informasi pewaktu mundur\n"
 "%s"
@@ -5527,6 +5547,9 @@ msgstr "Deskripsi tidak tersedia."
 msgid "No displayable files on this medium found!"
 msgstr "Tidak ditemukan file yang bisa dilihat pada medium ini!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Info acara tidak ditemukan, merekam tanpa batas waktu."
 
@@ -5569,9 +5592,6 @@ msgstr "Tidak ada layanan"
 
 msgid "No services/providers selected"
 msgstr "Tidak ada layanan/penyedia yang dipilih"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Tidak bisa standby"
@@ -7663,6 +7683,13 @@ msgstr "Pilih set karakter geser pada papankunci virtual"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Pilih set karakter geser pada papankunci virtual"
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Pilih resolusi horizontal:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Pilih sumber update"
 
@@ -9471,6 +9498,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift tidak memungkinkan!"
 
 msgid "Timezone"
+msgstr "Zona Waktu"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Zona Waktu"
 
 msgid "Timor-Leste"
