--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -2353,9 +2353,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Could not load medium! No disc inserted?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Could not open Picture in Picture"
 
@@ -3102,6 +3099,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - failed to scan (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "East"
 
@@ -3392,6 +3393,10 @@ msgstr "Stream"
 msgid "Error"
 msgstr "Error"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Error"
+
 msgid "Error code"
 msgstr "Error code"
 
@@ -3417,10 +3422,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5457,6 +5471,9 @@ msgstr "No description available."
 msgid "No displayable files on this medium found!"
 msgstr "No displayable files on this medium found!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "No event info found, recording indefinitely."
 
@@ -5499,9 +5516,6 @@ msgstr ""
 
 msgid "No services/providers selected"
 msgstr "No services/providers selected"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "No standby"
@@ -7585,6 +7599,12 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+msgid "Select timezone area or region."
+msgstr ""
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Select update source"
 
@@ -9369,6 +9389,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift not possible!"
 
 msgid "Timezone"
+msgstr "Wextu Zeman"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Wextu Zeman"
 
 msgid "Timor-Leste"
