--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -2507,10 +2507,6 @@ msgstr "Kon geen geschikt medium vinden - Verwijder aub enkele gedownloade image
 msgid "Could not load medium! No disc inserted?"
 msgstr "Kon het medium niet laden! Is er geen schijf geplaatst?"
 
-#, fuzzy
-msgid "Could not locate epg file on fallback tuner"
-msgstr "Activeer de import van timers van de Fallback tuner"
-
 msgid "Could not open Picture in Picture"
 msgstr "Kan Picture In Picture niet openen"
 
@@ -3251,6 +3247,10 @@ msgstr "EPG:"
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Fout - zoeken mislukt (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Oost"
 
@@ -3540,6 +3540,10 @@ msgstr "Eritrea"
 msgid "Error"
 msgstr "Fout"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Fout"
+
 msgid "Error code"
 msgstr "Foutcode"
 
@@ -3572,10 +3576,25 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Fout stop de stream!"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+#, fuzzy
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+"Fout tijdens het ophalen van de Fallback timer informatie\n"
+"%s"
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+"Fout tijdens het ophalen van de Fallback timer informatie\n"
+"%s"
+
+#, fuzzy
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 "Fout tijdens het ophalen van de Fallback timer informatie\n"
 "%s"
@@ -5595,6 +5614,9 @@ msgstr "Geen beschrijving beschikbaar."
 msgid "No displayable files on this medium found!"
 msgstr "Geen weer te geven bestanden op dit medium gevonden!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Geen EPG gegevens gevonden. Opname voor onbepaalde tijd."
 
@@ -5636,9 +5658,6 @@ msgstr "Geen uitzending"
 
 msgid "No services/providers selected"
 msgstr "Geen zender/provider gekozen"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Geen stand-by"
@@ -7711,6 +7730,13 @@ msgstr "Kies de variabele tekenset op het virtuele toetsenbord"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Kies enkel voor het volgende teken de variabele tekenset op het virtuele toetsenbord"
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Kies de horizontale resolutie:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Kies de bron om te updaten"
 
@@ -9512,6 +9538,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift is niet mogelijk!"
 
 msgid "Timezone"
+msgstr "Tijdzone"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Tijdzone"
 
 msgid "Timor-Leste"
