--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -2377,9 +2377,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Не вдалося завантажити носій! Перевірте, чи вставлений диск?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Неможливо відкрити картинку в картинці"
 
@@ -3137,6 +3134,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Помилка - неможливе сканування (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Схід"
 
@@ -3429,6 +3430,10 @@ msgstr "Порт стрімінгу"
 msgid "Error"
 msgstr "Помилка"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Помилка"
+
 msgid "Error code"
 msgstr "Код помилки"
 
@@ -3454,10 +3459,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5524,6 +5538,9 @@ msgstr "Немає описів."
 msgid "No displayable files on this medium found!"
 msgstr "Немає відображуваних файлів на цьому носії!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Інформація про подію не знайдена, запис на невизначений час."
 
@@ -5566,9 +5583,6 @@ msgstr "Немає сервісу"
 
 msgid "No services/providers selected"
 msgstr "Не вибрані канали/провайдери"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Не переходить в Режим очікування"
@@ -7670,6 +7684,13 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Впорядкувати по:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Вибір джерела оновлення"
 
@@ -9499,6 +9520,10 @@ msgid "Timeshift not possible!"
 msgstr "Таймшифт не можливий!"
 
 msgid "Timezone"
+msgstr "Часовий пояс"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Часовий пояс"
 
 msgid "Timor-Leste"
