--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -2323,9 +2323,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr ""
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "不能打開畫中畫."
 
@@ -3065,6 +3062,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "錯誤 - 掃描 (%s)失敗!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "東方"
 
@@ -3350,6 +3351,10 @@ msgstr ""
 msgid "Error"
 msgstr "錯誤"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "錯誤"
+
 msgid "Error code"
 msgstr ""
 
@@ -3376,10 +3381,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "連續的流"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5412,6 +5426,9 @@ msgstr "無可用的描述."
 msgid "No displayable files on this medium found!"
 msgstr "在這個媒介上未發現檔!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "EPG資料沒有發現,無限制錄製."
 
@@ -5453,9 +5470,6 @@ msgid "No service"
 msgstr ""
 
 msgid "No services/providers selected"
-msgstr ""
-
-msgid "No settings files to download on fallback tuner"
 msgstr ""
 
 msgid "No standby"
@@ -7537,6 +7551,13 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "選擇位置:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr ""
 
@@ -9288,6 +9309,10 @@ msgid "Timeshift not possible!"
 msgstr "不能時光平移!"
 
 msgid "Timezone"
+msgstr "時區"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "時區"
 
 msgid "Timor-Leste"
