--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -2346,9 +2346,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Could not load medium! No disc inserted?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Could not open Picture in Picture"
 
@@ -3095,6 +3092,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERROR - failed to scan (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "East"
 
@@ -3385,6 +3386,10 @@ msgstr "Stream"
 msgid "Error"
 msgstr "Error"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Error"
+
 msgid "Error code"
 msgstr "Error code"
 
@@ -3410,10 +3415,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5452,6 +5466,9 @@ msgstr "No description available."
 msgid "No displayable files on this medium found!"
 msgstr "No displayable files on this medium found!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "No event info found, recording indefinitely."
 
@@ -5494,9 +5511,6 @@ msgstr ""
 
 msgid "No services/providers selected"
 msgstr "No services/providers selected"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "No standby"
@@ -7580,6 +7594,12 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+msgid "Select timezone area or region."
+msgstr ""
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Select update source"
 
@@ -9368,6 +9388,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift not possible!"
 
 msgid "Timezone"
+msgstr "Timezone"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Timezone"
 
 msgid "Timor-Leste"
