--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -2337,9 +2337,6 @@ msgstr "Ei leidnud sobivat salvestuskeskkonda - sisesta näiteks USB pulk ja pro
 msgid "Could not load medium! No disc inserted?"
 msgstr "Ei saa plaati avada! Plaati pole sisestatud?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "PiP avamine ei õnnestunud"
 
@@ -3079,6 +3076,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "VIGA - (%s) otsing nurjus!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Ida"
 
@@ -3365,6 +3366,10 @@ msgstr "Eritrea"
 msgid "Error"
 msgstr "Viga"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Viga"
+
 msgid "Error code"
 msgstr "Veakood"
 
@@ -3397,10 +3402,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Viga, peata voog!"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5424,6 +5438,9 @@ msgstr "Saatetutvustust ei ole."
 msgid "No displayable files on this medium found!"
 msgstr "Sellel andmekandjal pole kuvatavaid faile!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Saatel pole teada lõppaeg. Salvestatakse pidevalt."
 
@@ -5466,9 +5483,6 @@ msgstr "Pole teenust"
 
 msgid "No services/providers selected"
 msgstr "Kanalit/levitajat pole valitud"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Ooteseisundita"
@@ -7535,6 +7549,13 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Vali horisontaalne resolutsioon:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Vali uuenduste allikas"
 
@@ -9337,6 +9358,10 @@ msgid "Timeshift not possible!"
 msgstr "Ajanihke kasutamine pole võimalik!"
 
 msgid "Timezone"
+msgstr "Ajavöönd"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Ajavöönd"
 
 msgid "Timor-Leste"
