--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -2640,9 +2640,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Koe medium net lade ! Is der wol in disc oanwezig ?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 #
 msgid "Could not open Picture in Picture"
 msgstr ""
@@ -3516,6 +3513,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Flater - Sykjen mislearre (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 #
 msgid "East"
 msgstr "East"
@@ -3843,6 +3844,11 @@ msgstr ""
 msgid "Error"
 msgstr "Flater"
 
+#
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Flater"
+
 msgid "Error code"
 msgstr ""
 
@@ -3868,10 +3874,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #
@@ -6218,6 +6233,9 @@ msgstr ""
 msgid "No displayable files on this medium found!"
 msgstr ""
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 #
 msgid "No event info found, recording indefinitely."
 msgstr "Gjin barren ynfo fûn, giit foar altiid troch mei opnimmen.."
@@ -6266,9 +6284,6 @@ msgid "No service"
 msgstr ""
 
 msgid "No services/providers selected"
-msgstr ""
-
-msgid "No settings files to download on fallback tuner"
 msgstr ""
 
 #
@@ -8703,6 +8718,12 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+msgid "Select timezone area or region."
+msgstr ""
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Select update source"
@@ -10733,6 +10754,11 @@ msgstr "Tiidsskowen is net mooglik !"
 
 #
 msgid "Timezone"
+msgstr "Tiidszone"
+
+#
+#, fuzzy
+msgid "Timezone area"
 msgstr "Tiidszone"
 
 msgid "Timor-Leste"
