--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2019-12-03 20:02+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -2350,10 +2350,6 @@ msgstr "Nie można znaleźć odpowiedniego nośnika - usuń niektóre pobrane im
 msgid "Could not load medium! No disc inserted?"
 msgstr "Nie można odczytać nośnika. Czy płyta jest w napędzie?"
 
-#, fuzzy
-msgid "Could not locate epg file on fallback tuner"
-msgstr "Włącz import timerów z tunera rezerwowego"
-
 msgid "Could not open Picture in Picture"
 msgstr "Nie mozna otworzyć PiP"
 
@@ -3087,6 +3083,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "BŁĄD - skanowanie (%s) nie powiodło się!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Wschód"
 
@@ -3369,6 +3369,10 @@ msgstr "Erytrea"
 msgid "Error"
 msgstr "Błąd"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Błąd"
+
 msgid "Error code"
 msgstr "Kod błędu"
 
@@ -3401,10 +3405,25 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "Błąd zatrzymania streamu!"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+#, fuzzy
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+"Błąd podczas pobierania  informacji o timerze z tunera zapasowego\n"
+"% s"
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+"Błąd podczas pobierania  informacji o timerze z tunera zapasowego\n"
+"% s"
+
+#, fuzzy
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 "Błąd podczas pobierania  informacji o timerze z tunera zapasowego\n"
 "% s"
@@ -5423,6 +5442,9 @@ msgstr "Brak dostępnego opisu."
 msgid "No displayable files on this medium found!"
 msgstr "Brak plików do wyświetlenia na tym nośniku!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Nie znaleziono informacji o wydarzeniu, nagrywanie na czas nieokreślony."
 
@@ -5464,9 +5486,6 @@ msgstr "Brak kanału"
 
 msgid "No services/providers selected"
 msgstr "Brak wybranych kanałów/nadawców"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Bez stanu czuwania"
@@ -7511,6 +7530,13 @@ msgstr "Wybierz zestaw znaków klawiatury wirtualnej z 'SHIFT'"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Wybierz alternatywny znak (z SHIFT) klawiatury wirtualnej tylko dla kolejnego znaku"
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Wybierz rozdzielczość poziomą:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Wybierz źródło aktualizacji"
 
@@ -9286,6 +9312,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift niemożliwy!"
 
 msgid "Timezone"
+msgstr "Strefa czasowa"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Strefa czasowa"
 
 msgid "Timor-Leste"
