--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -2345,9 +2345,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Não foi possível carregar a mídia! O disco foi inserido?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Não foi possível abrir o PiP"
 
@@ -3096,6 +3093,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - Falha na busca (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Leste"
 
@@ -3385,6 +3386,10 @@ msgstr ""
 msgid "Error"
 msgstr "Erro"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Erro"
+
 msgid "Error code"
 msgstr "Código de erro"
 
@@ -3410,10 +3415,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5448,6 +5462,9 @@ msgstr "Descrição indisponível."
 msgid "No displayable files on this medium found!"
 msgstr "Nenhum arquivo compatível foi encontrado!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "Informações do evento indisponíveis. Gravando indefinidamente."
 
@@ -5490,9 +5507,6 @@ msgstr "Sem serviço"
 
 msgid "No services/providers selected"
 msgstr "Nenhum serviço/operadora selecionado"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Sem StandBy"
@@ -7577,6 +7591,12 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+msgid "Select timezone area or region."
+msgstr ""
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Servidores de atualizações"
 
@@ -9360,6 +9380,10 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift não permitido!"
 
 msgid "Timezone"
+msgstr "Fuso horário"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Fuso horário"
 
 msgid "Timor-Leste"
