--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -2677,9 +2677,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Medija ni mogoče prebrati! Je v pogon vstavljen ustrezen medij?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 #
 msgid "Could not open Picture in Picture"
 msgstr "Ne morem odpreti Slike v Sliki"
@@ -3558,6 +3555,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "NAPAKA - neuspešno iskanje (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 #
 msgid "East"
 msgstr "Vzhod"
@@ -3897,6 +3898,11 @@ msgstr "Pretok"
 msgid "Error"
 msgstr "Napaka"
 
+#
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Napaka"
+
 msgid "Error code"
 msgstr "Koda napake"
 
@@ -3922,10 +3928,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #
@@ -6257,6 +6272,9 @@ msgstr "Opis ni na voljo."
 msgid "No displayable files on this medium found!"
 msgstr "Na pogonu ni datotek, ki jih lahko prikažem!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 #
 msgid "No event info found, recording indefinitely."
 msgstr "Ne najdem informacij o trenutnem dogodku. Trajanje snemanja bo neomejeno!"
@@ -6309,9 +6327,6 @@ msgstr "Napaka ..."
 #
 msgid "No services/providers selected"
 msgstr "Ni izbranih kanalov ali ponudnikov"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 #
 msgid "No standby"
@@ -8751,6 +8766,14 @@ msgid "Select the virtual keyboard shifted character set for the next character 
 msgstr ""
 
 #
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Izbor načina razvrščanja:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
+#
 msgid "Select update source"
 msgstr "Izberite vir nadgradnje"
 
@@ -10790,6 +10813,11 @@ msgstr "Časovni zamik ni možen!"
 
 #
 msgid "Timezone"
+msgstr "Časovni pas"
+
+#
+#, fuzzy
+msgid "Timezone area"
 msgstr "Časovni pas"
 
 msgid "Timor-Leste"
