--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -2351,9 +2351,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr "Ortam yüklenemedi! Takılı disk yok?"
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "Resim içinde Resim (RiR) açılamıyor"
 
@@ -3109,6 +3106,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "HATA - Tarama başarısız (%s)!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "Doğu"
 
@@ -3399,6 +3400,10 @@ msgstr "Akış"
 msgid "Error"
 msgstr "Hata"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "Hata"
+
 msgid "Error code"
 msgstr "Hata kodu"
 
@@ -3424,10 +3429,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr ""
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5479,6 +5493,9 @@ msgstr "Açıklayıcı bilgi yok."
 msgid "No displayable files on this medium found!"
 msgstr "Bu medyada gösterilecek dosya bulunamadı!"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "EPG bilgisi bulunamadı, süresiz kaydediliyor."
 
@@ -5521,9 +5538,6 @@ msgstr "Servis yok"
 
 msgid "No services/providers selected"
 msgstr "Servis/Sağlayıcı seçilmedi"
-
-msgid "No settings files to download on fallback tuner"
-msgstr ""
 
 msgid "No standby"
 msgstr "Beklemede değil"
@@ -7614,6 +7628,13 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+#, fuzzy
+msgid "Select timezone area or region."
+msgstr "Seçileni sıralama yöntemi:"
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr "Güncelleme kaynağı seçin"
 
@@ -9416,6 +9437,10 @@ msgid "Timeshift not possible!"
 msgstr "Zaman kaydırıcı kullanılamaz!"
 
 msgid "Timezone"
+msgstr "Zaman dilimi"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "Zaman dilimi"
 
 msgid "Timor-Leste"
