--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-28 22:31+0100\n"
+"POT-Creation-Date: 2020-03-21 09:07+0100\n"
 "PO-Revision-Date: 2016-06-17 12:13+0800\n"
 "Last-Translator: nx111 <gdzdz@163.com>\n"
 "Language-Team: NEWBOLT\n"
@@ -2323,9 +2323,6 @@ msgstr ""
 msgid "Could not load medium! No disc inserted?"
 msgstr ""
 
-msgid "Could not locate epg file on fallback tuner"
-msgstr ""
-
 msgid "Could not open Picture in Picture"
 msgstr "不能打开画中画"
 
@@ -3066,6 +3063,10 @@ msgstr ""
 msgid "ERROR - failed to scan (%s)!"
 msgstr "错误 - 扫描 (%s)失败!"
 
+#, python-format
+msgid "ERROR downloading file %s"
+msgstr ""
+
 msgid "East"
 msgstr "东"
 
@@ -3354,6 +3355,10 @@ msgstr ""
 msgid "Error"
 msgstr "错误"
 
+#, fuzzy, python-format
+msgid "Error %s"
+msgstr "错误"
+
 msgid "Error code"
 msgstr "错误码"
 
@@ -3380,10 +3385,19 @@ msgstr ""
 msgid "Error stop stream!"
 msgstr "固定流"
 
+msgid "Error when writing epg.dat on server"
+msgstr ""
+
+msgid "Error while retreiving epg.dat from server"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error while retreiving fallback timer information\n"
 "%s"
+msgstr ""
+
+msgid "Error while retreiving location of epg.dat on server"
 msgstr ""
 
 #, python-format
@@ -5413,6 +5427,9 @@ msgstr "无可用信息"
 msgid "No displayable files on this medium found!"
 msgstr "当前位置未找到文件"
 
+msgid "No epg.dat file found server"
+msgstr ""
+
 msgid "No event info found, recording indefinitely."
 msgstr "EPG数据没有发现,无限制录制."
 
@@ -5454,9 +5471,6 @@ msgid "No service"
 msgstr ""
 
 msgid "No services/providers selected"
-msgstr ""
-
-msgid "No settings files to download on fallback tuner"
 msgstr ""
 
 msgid "No standby"
@@ -7536,6 +7550,12 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
+msgid "Select timezone area or region."
+msgstr ""
+
+msgid "Select timezone in the area or region."
+msgstr ""
+
 msgid "Select update source"
 msgstr ""
 
@@ -9279,6 +9299,10 @@ msgid "Timeshift not possible!"
 msgstr "不能时光平移!"
 
 msgid "Timezone"
+msgstr "时区"
+
+#, fuzzy
+msgid "Timezone area"
 msgstr "时区"
 
 msgid "Timor-Leste"
